--- a/deep-learning.html
+++ b/deep-learning.html
@@ -116,7 +116,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865233-senior-back-end-engineer-deep-learning-infrastructure-'>Run:AI Senior Back End Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RunAI1/743999691865233-senior-back-end-engineer-deep-learning-infrastructure-'>Run:AI Senior Back End Engineer (Deep Learning infrastructure) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -147,11 +147,11 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p>6 days ago ... ... artificial intelligence and self-driving cars. Learn more about NVIDIA. Solutions 
 Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691132277-thesis-in-the-field-of-deep-learning-for-autonomous-driving'>Bosch Group Thesis in the field of Deep Learning for Autonomous Driving | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691132277-thesis-in-the-field-of-deep-learning-for-autonomous-driving'>Bosch Group Thesis in the field of Deep Learning for Autonomous Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1752188'>Job Application for WellSaid Labs Deep Learning Engineer at The Allen Institute for Artificial Intelligence</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1752188'>Job Application for WellSaid Labs Deep Learning Engineer at The Allen Institute for Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -219,7 +219,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 vision, or - reinforcement learning. Applied to, for example: text categorization, 
 text?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/enlitic/2240ad0c-3b69-4a74-adc2-1273df00dc67'>Enlitic - Deep Learning Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/enlitic/2240ad0c-3b69-4a74-adc2-1273df00dc67'>Enlitic - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -243,7 +243,7 @@ text?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4325673002'>Job Application for Computer Vision / Deep Learning Scientist at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4325673002'>Job Application for Computer Vision / Deep Learning Scientist at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-06-16</p>
 <hr/>
@@ -304,7 +304,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-05-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689014162-faszination-emobility-praktikum-fertigungsprozessbetreuung-e-maschine-automatisierte-prufung-eines-laserschwei-prozesses-mit-deep-learning'>Bosch Group Faszination eMobility: Praktikum Fertigungsprozessbetreuung E-Maschine: Automatisierte Pr?fung eines Laserschwei?prozesses mit Deep-Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689014162-faszination-emobility-praktikum-fertigungsprozessbetreuung-e-maschine-automatisierte-prufung-eines-laserschwei-prozesses-mit-deep-learning'>Bosch Group Faszination eMobility: Praktikum Fertigungsprozessbetreuung E-Maschine: Automatisierte Pr?fung eines Laserschwei?prozesses mit Deep-Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-29</p>
 <hr/>
@@ -414,7 +414,7 @@ Project?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/osPW7fw4'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Sr Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/osPW7fw4'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Sr Software Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -422,7 +422,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://zycus-1.workable.com/j/8EBA2E695D'>Zycus - Jobs: AI/Machine learning-NLP, Deep learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zycus-1.workable.com/j/8EBA2E695D'>Zycus - Jobs: AI/Machine learning-NLP, Deep learning - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
@@ -438,7 +438,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615734/'>Deep Learning Engineer, Core Modeling in Denver | Open position | DataRobot</a></h5> 
+<h5><a href='https://www.datarobot.com/careers/job/1615734/'>Deep Learning Engineer, Core Modeling in Denver | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
